# EMT_image_analysis

./: .gitignore  LICENSE  README.md  fms_query_production.py
Basement_membrane_segmentation/cytoDL_configs/: eval.yaml
CollagenIV_mesh_generation/: Mesh_generation.py  README.md  pyproject.toml  requirements.txt
CollagenIV_segmentation/: README.md
CollagenIV_segmentation/cytoDL_configs/data/: segmentation_basement_membrane_from_czi.yaml
CollagenIV_segmentation/processing_workflow/: batch_split_collagen.py  pyproject.toml
CollagenIV_segmentation/processing_workflow/configs/: config_saveout_raw_collagen.yaml
CollagenIV_segmentation/processing_workflow/configs/profile/: config.yaml
CollagenIV_segmentation/processing_workflow/step_save_out_basement_membrane/: Snakefile
Collagen_Mesh_Generation/: .pdm-python  Mesh_generation.py  README.md  requirements.txt
ColonyMask_GT_Generation/: README.md  macro-cytogfp-masks_fiji.ijm
ColonyMask_Training_Inference/: .pdm-python  ColonyMask_merging_thresholding_rearranging.py  README.md  eval_scale2.yaml  infer_segmentation_model_multiscale_patch1.yaml
Colony_mask_training_inference/: ColonyMask_merging_thresholding_rearranging.py  README.md  eval_scale1.yaml  eval_scale3.yaml  infer_segmentation_model_multiscale_patch2.yaml  infer_segmentation_model_multiscale_patch3.yaml  pyproject.toml  requirements.txt  train.yaml  train_cytoGFP_segmentation_model.yaml
Colony_mask_training_inference/configs/data/im2im/: segmentation_all_cells_mask_from_czi.yaml
Colony_mask_training_inference/configs/experiment/im2im/: eval_scale1.yaml  eval_scale2.yaml  eval_scale3.yaml
Colony_mask_training_inference/configs/experiment/local/: eval_scale1.yaml  eval_scale1_new.yaml  eval_scale1_new_tiff.yaml
Colony_mask_training_inference/configs/model/: segmentation_all_cells_mask.yaml
Colony_mask_training_inference/data/: segmentation_all_cells_mask.yaml
Colony_mask_training_inference/experiment/: eval_scale3.yaml  train.yaml
Data_access/: OME_zarr_importer.py  README.md  requirements.txt
H2B and EOMES Instance Segmentations/: 1_CP3DenoiseModel_RescalePerTimepoint.py  1_CP3DenoiseModel_ScaleValuesFromCSV_ConstantScalingOutput.py  4_ClipMaskBasedOnRelativeIntensityZSD20x_gpu.py  README.md
H2B_and_EOMES_instance_segmentation/: 2_CellposeSeg_3D_Multithread_CSVOrInputFolder.py  5_H2B_EomesPrePostClippingIntegIntObjectFiltering.cppipe
ZO1Mask_Training_Inference/: temp_1.py
basement_membrane_segmentation/: ReadME.md
basement_membrane_segmentation/cytoDL_configs/data/: segmentation_basement_membrane.yaml
basement_membrane_segmentation/cytoDL_configs/experiment/: segmentation_basement_membrane.yaml
basement_membrane_segmentation/cytoDL_configs/model/: segmentation_basement_membrane.yaml
basement_membrane_segmentation/processing_workflow/: .pdm-python  batch_postprocess_collagen_mask.py  create_BM_snakemake_configs.py
basement_membrane_segmentation/processing_workflow/configs/: config_basement_membrane_segmentation_EOMES.yaml  config_basement_membrane_segmentation_H2B.yaml  config_saveout_raw_collagen.yaml
basement_membrane_segmentation/processing_workflow/step_postprocess_basement_membrane_mask/: Snakefile
