[project]
name = "EMT_ColonyMask_merging_thresholding_rearranging"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Allen Institute", email = "cells@alleninstitute.org"},
]
dependencies = [
    "aicsimageio",
    "opencv-python-headless",
    "matplotlib",
    "numpy",
    "pandas",
    "tifffile>=2023.7.10",  # 2023.7.10 is the version used originally. Some earlier versions break aicsimageio. Later versions may be okay.
    "scikit-image",
    "cyto-dl @ git+https://github.com/AllenCellModeling/cyto-dl@f9c3058e5a86a0710375955549bd0cfc4c87e4ca",
    "monai-weekly==1.3.dev2333",  # cyto-dl uses a feature removed from monai 1.4
]
# cyto-dl does not support python >= 3.11 yet
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "AISL"}


[tool.pdm]
distribution = false
