[project]
name = "EMT_ColonyMask_merging_thresholding_rearranging"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Allen Institute", email = "cells@alleninstitute.org"},
]
dependencies = [
    "aicsimageio",
    "opencv-python-headless",
    "matplotlib",
    "numpy",
    "pandas",
    "tifffile",
    "scikit-image",
    "cyto-dl @ git+https://github.com/AllenCellModeling/cyto-dl@57f9b3232da0ed853446d63de3237ff615ce554d",
    "monai-weekly==1.3.dev2333",  # cyto-dl uses a feature removed from monai 1.4
]
# cyto-dl does not support python >= 3.11 yet
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "AISL"}


[tool.pdm]
distribution = false
